--- a/public/css/Detailsrch.css
+++ b/public/css/Detailsrch.css
@@ -107,7 +107,8 @@ hr {
     display: flex;
     flex-wrap: wrap;
     margin: 20px 0;
-    justify-content: space-around;
+    padding: 0 10%;
+    justify-content: space-between;
 }
 .listitem {
     background-color: white;
@@ -115,6 +116,7 @@ hr {
     text-align: center;
     box-shadow: 2px 2px 2px 2px rgb(192, 192, 192);
     border-radius: 25px;
+    margin-bottom: 30px;
 }
 .listitem p {
     margin: 0;
