--- a/public/css/Detailsrch.css
+++ b/public/css/Detailsrch.css
@@ -115,8 +115,13 @@ hr {
     display: inline-flex;
     text-align: center;
     box-shadow: 2px 2px 2px 2px rgb(192, 192, 192);
+    border: 3px solid transparent;
     border-radius: 25px;
     margin-bottom: 30px;
+    cursor: pointer;
+}
+.listitem:hover {
+    border: 3px solid rgb(182, 182, 182);
 }
 .listitem p {
     margin: 0;
